# python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  setup.cfg
docs/: app.md  index.md
src/app/: main.py
tests/: test_main.py
