[metadata]
name = project
version = 0.1.0
description = Project
author = Ben Johnson
author_email = ben@johnsontech.io
license = MIT
# readme = "README.md"
python = ^3.7
homepage =
repository =
documentation =

keywords =

classifiers =
    Topic :: Software Development

[options]
package_dir=
    =src
packages=find:
install_requires =
    requests

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts =
#     contacts-api = contacts.app:main

[tox:tox]
isolated_build = True
# envlist = py27, py35, py36, py37, pypy, jython
envlist = py39, flake8, black, isort



[testenv]
deps =
    pytest
    pytest-cov[all]
commands =
    pytest --cov-report=term --cov-report=html --cov=app tests/

[testenv:py39]
basepython = python3.9


[testenv:flake8]
deps =
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-fixme
    flake8-functions-names
    flake8-print
    flake8-eradicate
    flake8-bugbear
    flake8-unused-arguments
    flake8-sfs
    flake8-annotations
commands =
  flake8

[testenv:black]
deps =
    black
commands =
    black --check --diff src tests

[testenv:isort]
deps =
    isort
commands =
    isort --check-only --diff src tests


[coverage:run]
branch = True

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:

[coverage:html]
directory = build/coverage_html_report

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# SFS301 Ignore f-strings
ignore =
    SFS301,
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True
